Add ability to vote on thread
